# vii_cms

./: .gitignore
viicms_player/: README.md  flutter_native_splash.yaml  pubspec.yaml
viicms_player/android/app/: build.gradle.kts
viicms_player/ios/Runner/: Info.plist
viicms_player/ios/Runner.xcodeproj/: project.pbxproj
viicms_player/lib/: main.dart
viicms_player/lib/api/: api_client.dart
viicms_player/lib/constants/: app_colors.dart
viicms_player/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
viicms_player/lib/pages/: home_page.dart
viicms_player/lib/providers/: locale_manager.dart  theme_manager.dart
viicms_player/lib/theme/: app_theme.dart
viicms_player/lib/utils/: local_storage.dart
viicms_player/linux/: CMakeLists.txt
viicms_player/linux/runner/: my_application.cc
viicms_player/macos/Runner.xcodeproj/: project.pbxproj
viicms_player/test/: widget_test.dart
viicms_player/web/: index.html  manifest.json
viicms_player/windows/: CMakeLists.txt
viicms_player/windows/runner/: Runner.rc  main.cpp
viicms_server/: Cargo.toml
viicms_server/admin/: Cargo.toml
viicms_server/admin/src/: main.rs
viicms_server/admin/src/router/: api.rs  mod.rs
viicms_server/conf/: application.toml
viicms_server/lib/core/: Cargo.toml
viicms_server/lib/dborm/: Cargo.toml
viicms_server/lib/gather/: Cargo.toml
viicms_server/server/: Cargo.toml
viicms_server/web/: .prettierrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.mjs  vite.config.ts
viicms_server/web/src/: app.tsx  (+1 more)
(+43 files in other folders)
