[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]

core = {version = "0.1.0",path = "../lib/core"}

actix-web = "4"
actix-cors = "0.7.1"
actix-files = "0.6.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
chrono = "0.4.39"
rand = "0.9.0"
http = "1.3.1"
log = "0.4.27"
